# upn-calculator

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.plans/upn-taschenrechner-cli/: EPIC.md  PRD.md  README.md  STATUS.md
.plans/upn-taschenrechner-cli/tasks/: task-001-upn-parser-core.md  task-002-grundoperationen.md  task-003-trigonometrische-funktionen.md  task-004-cli-repl.md  task-005-stack-management.md  task-006-error-handling.md
tests/: test_calculator.py  test_grundoperationen.py
upn_calculator/: __init__.py  calculator.py  errors.py  operators.py  parser.py
